fix overflow: auto;

--- a/src/sass/layouts/header.module.scss
+++ b/src/sass/layouts/header.module.scss
@@ -145,7 +145,7 @@
   left: 0;
 
   gap: 20px;
-  overflow: auto;
+
   background: #212121;
   color: #758697;
   padding-top: 100px;
